--- a/index.html
+++ b/index.html
@@ -165,21 +165,7 @@
             </h2>
             
             <div class="space-y-4">
-                <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
-                    <h3 class="text-xl font-semibold text-gray-900 mb-1">无料设计稿件</h3>
-                    <p class="text-gray-500 mb-3">京吹透卡/小邮票设计稿</p>
-                    <a href="https://github.com/Hsiao05/homepage/tree/main/%E6%97%A0%E6%96%99%E8%AE%BE%E8%AE%A1" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
-                        GitHub 仓库
-                    </a>
-                </article>
-
-                <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
-                    <h3 class="text-xl font-semibold text-gray-900 mb-1">乐谱</h3>
-                    <p class="text-gray-500 mb-3">Score</p>
-                    <a href="https://github.com/Hsiao05/homepage/tree/main/%E4%B9%90%E8%B0%B1" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
-                        GitHub 仓库
-                    </a>
-                </article>
+ 
 
                 <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
                     <h3 class="text-xl font-semibold text-gray-900 mb-1">Bangumi 「已看」片单留档</h3>
@@ -194,6 +180,30 @@
                     <p class="text-gray-500 mb-3">「一起看」看过的/在看的 动画片单</p>
                     <a href="https://caramel-mascara-ed7.notion.site/29f2cfa96d5e8177ae1ff083b3e9c932?v=29f2cfa96d5e81419f29000cd7edb784" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
                         https://caramel-mascara-ed7.notion.site/29f2cfa96d5e8177ae1ff083b3e9c932?v=29f2cfa96d5e81419f29000cd7edb784
+                    </a>
+                </article>
+
+               <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
+                    <h3 class="text-xl font-semibold text-gray-900 mb-1">京吹设定集收藏</h3>
+                    <p class="text-gray-500 mb-3">京吹/利兹与青鸟 设定集</p>
+                    <a href="其他文件留存/hibikebooks.html" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
+                        链接页面
+                    </a>
+                </article>
+
+               <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
+                    <h3 class="text-xl font-semibold text-gray-900 mb-1">无料设计稿件</h3>
+                    <p class="text-gray-500 mb-3">京吹透卡/小邮票设计稿</p>
+                    <a href="https://github.com/Hsiao05/homepage/tree/main/%E6%97%A0%E6%96%99%E8%AE%BE%E8%AE%A1" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
+                        GitHub 仓库
+                    </a>
+                </article>
+
+                <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
+                    <h3 class="text-xl font-semibold text-gray-900 mb-1">乐谱</h3>
+                    <p class="text-gray-500 mb-3">Score</p>
+                    <a href="https://github.com/Hsiao05/homepage/tree/main/%E4%B9%90%E8%B0%B1" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
+                        GitHub 仓库
                     </a>
                 </article>
 
@@ -291,7 +301,7 @@
                     </a>             
                     </a>
                     <p class="text-gray-500 mb-3"></p>
-                    <a href="https://https://trace.moe" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
+                    <a href="https://trace.moe" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
                         动画画面出处查找  trace.moe
                     </a>  
                     </a>
@@ -347,5 +357,4 @@
 
     </div>
 </body>
-
 </html>
