--- a/其他文件留存/hibikebooks.html
+++ b/其他文件留存/hibikebooks.html
@@ -38,7 +38,7 @@
         </header>
 
         <p class="mb-1">
-            <a href="index.html" target="_blank" class="text-blue-600 hover:text-blue-700 font-medium break-all">
+            <a href="https://hsiao05.github.io/homepage/" target="_blank" class="text-blue-600 hover:text-blue-700 font-medium break-all">
                  << 返回主页 Return to homepage
             </a>
         </p>
