--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- 头部信息 -->
         <header class="mb-10 text-center">
             <h1 class="text-4xl font-extrabold text-gray-900 mb-2">
-                Tomo 逍 的个人网站
+                Tomo しょう 的个人网站
             </h1>
             <!-- 描述/注释说明 -->
             <p class="text-lg text-gray-500 tracking-wide">
@@ -192,6 +192,14 @@
                 </article>
 
                <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
+                    <h3 class="text-xl font-semibold text-gray-900 mb-1">教材和专业书</h3>
+                    <p class="text-gray-500 mb-3">部分课本和专业用电子书</p>
+                    <a href="其他文件留存/textbookindex.html" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
+                        链接页面
+                    </a>
+                </article>
+
+               <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
                     <h3 class="text-xl font-semibold text-gray-900 mb-1">无料设计稿件</h3>
                     <p class="text-gray-500 mb-3">京吹透卡/小邮票设计稿</p>
                     <a href="https://github.com/Hsiao05/homepage/tree/main/%E6%97%A0%E6%96%99%E8%AE%BE%E8%AE%A1" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
@@ -209,7 +217,7 @@
 
                 <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
                     <h3 class="text-xl font-semibold text-gray-900 mb-1">其他文件</h3>
-                    <p class="text-gray-500 mb-3">只是一些文件。</p>
+                    <p class="text-gray-500 mb-3">只是一些文件，和部分书籍目录源码。</p>
                     <a href="https://github.com/Hsiao05/homepage/tree/main/%E5%85%B6%E4%BB%96%E6%96%87%E4%BB%B6%E7%95%99%E5%AD%98" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
                         GitHub 仓库
                     </a>
