--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             font-family: 'Inter', 'Microsoft YaHei', sans-serif;
             background-color: #f7f7f7;
             color: #1f2937; 
+            background-image: 'bg.png';
+            background-size: cover; 
+            background-attachment: fixed;
+            background-repeat: no-repeat;
         }
         .link-card {
             transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
@@ -20,6 +24,7 @@
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
         }
     </style>
+    
 </head>
 <body class="min-h-screen p-4 sm:p-8">
 
@@ -186,7 +191,7 @@
                <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
                     <h3 class="text-xl font-semibold text-gray-900 mb-1">京吹设定集收藏</h3>
                     <p class="text-gray-500 mb-3">京吹/利兹与青鸟 设定集</p>
-                    <a href="其他文件留存/hibikebooks.html" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
+                    <a href="hibikebooks.html" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
                         链接页面
                     </a>
                 </article>
@@ -194,7 +199,7 @@
                <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
                     <h3 class="text-xl font-semibold text-gray-900 mb-1">教材和专业书</h3>
                     <p class="text-gray-500 mb-3">部分课本和专业用电子书</p>
-                    <a href="其他文件留存/textbookindex.html" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
+                    <a href="textbookindex.html" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
                         链接页面
                     </a>
                 </article>
@@ -217,7 +222,7 @@
 
                 <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
                     <h3 class="text-xl font-semibold text-gray-900 mb-1">其他文件</h3>
-                    <p class="text-gray-500 mb-3">只是一些文件，和部分书籍目录源码。</p>
+                    <p class="text-gray-500 mb-3">文件中转站</p>
                     <a href="https://github.com/Hsiao05/homepage/tree/main/%E5%85%B6%E4%BB%96%E6%96%87%E4%BB%B6%E7%95%99%E5%AD%98" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
                         GitHub 仓库
                     </a>
@@ -366,4 +371,3 @@
     </div>
 </body>
 </html>
-
