--- a/index.html
+++ b/index.html
@@ -203,7 +203,13 @@
                         链接页面
                     </a>
                 </article>
-
+               <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
+                    <h3 class="text-xl font-semibold text-gray-900 mb-1">2024-2025.6 CET6</h3>
+                    <p class="text-gray-500 mb-3">2024-2025.6 大学英语六级真题（共9套 含听力）的小网站</p>
+                    <a href="https://jiebochecheckin.github.io/cet6/" target="_blank" class="inline-block text-blue-600 hover:text-blue-700 font-medium break-all">
+                        链接页面
+                    </a>
+                </article>
                <article class="link-card bg-white p-6 rounded-xl shadow-md hover:shadow-lg">
                     <h3 class="text-xl font-semibold text-gray-900 mb-1">无料设计稿件</h3>
                     <p class="text-gray-500 mb-3">京吹透卡/小邮票设计稿</p>
@@ -371,3 +377,4 @@
     </div>
 </body>
 </html>
+
